DONE IM NOT ADDING A REATURN TO HOME!

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
     justify-content: space-evenly;
     padding: 0px;
     list-style-type: none;
-    
 }
 #page-link3{
     padding: 140px 125px;
@@ -19,8 +18,6 @@
     box-sizing: border-box;
     background-image: url("https://www.allrecipes.com/thmb/6FrDWEHpkkTvA9pRVFMT84OBSSE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8637636_Hamburgers-with-Grilled-Apple-and-Chili-Crisp_Dotdash-Meredith-Food-Studios_4x3-9bfefd1cbcaa42648e0a4719b741aafa.jpg");
     background-size: cover;
-    
-    
 }
 
 #page-link2{
@@ -34,8 +31,6 @@
     box-sizing: border-box;
     background-image: url("https://www.allrecipes.com/thmb/M8U_g0jDi-vgNCiwnTYdHY32GU0=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8648903_The-Perfect-Grilled-Chicken-Breasts_Dotdash-Meredith-Food-Studios_4x3-64f4be142d564b6f839339a16b6f59a2.jpg");
     background-size: cover;
-
-    
 }
 #page-link1{
     padding: 140px 70px;
@@ -48,8 +43,47 @@
     box-sizing: border-box;
     background-image: url("https://www.allrecipes.com/thmb/vom5-lRLPCHBskR-k4wDau1GMqw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/665982-italian-chicken-marinade-wannabe-chefette-4x3-1-ac0b567c5bd0457e96e6a15317d9ab57.jpg");
     background-size: cover;
-    
 }
+.R-img-L{
+    display: flex;
+    justify-content: center;
+    align-items: start;
+}
+#button-L1,#button-L2,#button-L3{
+    margin:auto 5px auto 0
+}
+#button-R1,#button-R2,#button-R3{
+    margin:auto 0;
+}
+#button-L1, #button-R1,#button-L2, #button-R2,#button-L3, #button-R3{
+    height: 185px;
+    border: 5px outset;
+    border-radius: 3px;
+    color: rgb(7, 7, 7);
+    border-color: rgb(7, 7, 7);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    position: sticky;
+    top:0;
+    font-size: 40px;
+    padding: 1px 50px;
+}
+
+/*3*/
+#button-L1,#button-R2{
+    background-image: url("https://www.allrecipes.com/thmb/6FrDWEHpkkTvA9pRVFMT84OBSSE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8637636_Hamburgers-with-Grilled-Apple-and-Chili-Crisp_Dotdash-Meredith-Food-Studios_4x3-9bfefd1cbcaa42648e0a4719b741aafa.jpg");
+    background-size: cover;
+}
+/*2*/
+#button-L3,#button-R1{
+    background-image: url("https://www.allrecipes.com/thmb/M8U_g0jDi-vgNCiwnTYdHY32GU0=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8648903_The-Perfect-Grilled-Chicken-Breasts_Dotdash-Meredith-Food-Studios_4x3-64f4be142d564b6f839339a16b6f59a2.jpg");
+    background-size: cover;
+}
+/*1*/
+#button-L2,#button-R3{
+    background-image: url("https://www.allrecipes.com/thmb/vom5-lRLPCHBskR-k4wDau1GMqw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/665982-italian-chicken-marinade-wannabe-chefette-4x3-1-ac0b567c5bd0457e96e6a15317d9ab57.jpg");
+    background-size: cover;
+}
+
 
 #bimg, #chickenimg, #marinadeimg{
     margin: 0 auto;
@@ -64,7 +98,6 @@
 #bheader, #chickenheader, #marinadeheader, #index-title{
     text-align: center;
     color: blue;
-    
 }
 
 .subheaders{
